fix animation and safari spacing

--- a/src/components/UFOScene/UFOScene.module.scss
+++ b/src/components/UFOScene/UFOScene.module.scss
@@ -66,7 +66,6 @@
 }
 
 .ufo__beam {
-  flex: 1;
   width: 50%;
   transform: scale(1.4);
 
